# proc-macro2-diagnostics-more

./: Cargo.toml  README.md
src/: lib.rs  prelude_ext.rs
src/ext/: alloc.rs  core.rs  proc_macro2_diagnostics.rs
src/prelude_ext/: alloc.rs  core.rs  proc_macro2_diagnostics.rs
